Fixed the Canada wordmark being clipped in the xxsmall view Fixes #871

--- a/src/footer/_screen-xxs-max.scss
+++ b/src/footer/_screen-xxs-max.scss
@@ -7,6 +7,7 @@ footer {
 		img {
 			height: 25px;
 			margin-top: 15px;
+			max-width: 100%;
 			padding-right: 10px;
 		}
 	}
